--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -16,3 +16,4 @@ fluid.mtc.ionizedPlasma=Ionized Plasma
 item.mtc.ionizedPlasmaBucket.name=Ionized Plasma Bucket
 
 itemGroup.mtc.blocks=Matter Blocks
+itemGroup.mtc.items=Matter Items
