--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -9,6 +9,8 @@ tile.mtc.plasmaExtractor.name=Plasma Extractor
 tile.mtc.wormHoleStabilizer.name=Wormhole Stabilizer
 tile.mtc.matterInjector.name=Matter Injector
 tile.mtc.cryotheumAcceptor.name=Cryotheum Acceptor
+tile.mtc.hydrogenAcceptor.name=Hydrogen Acceptor
+tile.mtc.stabilizerAcceptor.name=Stabilizer Acceptor
 tile.mtc.ionizedPlasma.name=Ionized Plasma
 tile.mtc.toxicWaste.name=Toxic Waste
 tile.mtc.hydrogen.name=Hydrogen
