--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -22,7 +22,8 @@ tile.mtc.ionizedPlasma.name=Ionized Plasma
 tile.mtc.toxicWaste.name=Toxic Waste
 tile.mtc.hydrogen.name=Hydrogen
 tile.mtc.heatedCryotheum.name=Heated Cryotheum
-tile.mtc.stabilizer.name=stabilizer
+tile.mtc.stabilizer.name=Stabilizer
+tile.mtc.liquidMatter.name=Liquid Matter
 
 
 fluid.mtc.ionizedPlasma=Ionized Plasma
@@ -30,6 +31,7 @@ fluid.mtc.toxicWaste=Toxic Waste
 fluid.mtc.hydrogen=Hydrogen
 fluid.mtc.heatedCryotheum=Heated Cryotheum
 fluid.mtc.stabilizer=Stabilizer
+fluid.mtc.liquidMatter=Liquid Matter
 
 
 item.mtc.ionizedPlasmaBucket.name=Ionized Plasma Bucket
@@ -37,6 +39,7 @@ item.mtc.toxicWasteBucket.name=Toxic Waste Bucket
 item.mtc.hydrogenBucket.name=Hydrogen Bucket
 item.mtc.heatedCryotheumBucket.name=Heated Cryotheum Bucket
 item.mtc.stabilizerBucket.name=Stabilizer Bucket
+item.mtc.liquidMatterBucket.name=Liquid Matter Bucket
 
 
 itemGroup.mtc.blocks=Matter Blocks
