--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -22,21 +22,21 @@ tile.mtc.ionizedPlasma.name=Ionized Plasma
 tile.mtc.toxicWaste.name=Toxic Waste
 tile.mtc.hydrogen.name=Hydrogen
 tile.mtc.heatedCryotheum.name=Heated Cryotheum
-tile.mtc.stabilizer.name=stabilizer
+tile.mtc.liquidStabilizer.name=Liquid Stabilizer
 
 
 fluid.mtc.ionizedPlasma=Ionized Plasma
 fluid.mtc.toxicWaste=Toxic Waste
 fluid.mtc.hydrogen=Hydrogen
 fluid.mtc.heatedCryotheum=Heated Cryotheum
-fluid.mtc.stabilizer=Stabilizer
+fluid.mtc.liquidStabilizer=Liquid Stabilizer
 
 
 item.mtc.ionizedPlasmaBucket.name=Ionized Plasma Bucket
 item.mtc.toxicWasteBucket.name=Toxic Waste Bucket
 item.mtc.hydrogenBucket.name=Hydrogen Bucket
 item.mtc.heatedCryotheumBucket.name=Heated Cryotheum Bucket
-item.mtc.stabilizerBucket.name=Stabilizer Bucket
+item.mtc.liquidStabilizerBucket.name=Liquid Stabilizer Bucket
 
 
 itemGroup.mtc.blocks=Matter Blocks
