--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -18,6 +18,7 @@ tile.mtc.toxicWasteEjector.name=Toxic Waste Ejector
 tile.mtc.heatedCryotheumEjector.name=Heated Cryotheum Ejector
 tile.mtc.reactorPowerAcceptor.name=Reactor Power Acceptor
 tile.mtc.reactorTerminal.name=Reactor Terminal
+tile.mtc.reactorCore.name=Reactor Core
 
 tile.mtc.ionizedPlasma.name=Ionized Plasma
 tile.mtc.toxicWaste.name=Toxic Waste
