--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -10,6 +10,7 @@ tile.mtc.wormHoleStabilizer.name=Wormhole Stabilizer
 tile.mtc.matterInjector.name=Matter Injector
 tile.mtc.osmiumOre.name=Osmium Ore
 tile.mtc.iridiumOre.name=Iridium Ore
+tile.mtc.unstabelMatter.name=Unstabel Matter
 
 tile.mtc.cryotheumAcceptor.name=Cryotheum Acceptor
 tile.mtc.hydrogenAcceptor.name=Hydrogen Acceptor
