--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -11,6 +11,11 @@ tile.mtc.matterInjector.name=Matter Injector
 tile.mtc.osmiumOre.name=Osmium Ore
 tile.mtc.iridiumOre.name=Iridium Ore
 tile.mtc.unstableMatter.name=Unstable Matter
+tile.mtc.generatorPlating.name=Generator Plating
+tile.mtc.heatSink.name=Heat Sink
+
+
+
 
 tile.mtc.cryotheumAcceptor.name=Cryotheum Acceptor
 tile.mtc.hydrogenAcceptor.name=Hydrogen Acceptor
