--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -29,6 +29,9 @@ tile.mtc.reactorTerminal.name=Reactor Terminal
 tile.mtc.reactorCore.name=Reactor Core
 tile.mtc.cooler.name=Cooler
 tile.mtc.electrolizer.name=Electrolizer
+tile.mtc.exhaustPipe.name=Exhaust Pipe
+tile.mtc.waterInjector.name=Water Injector
+tile.mtc.plasmaInjector.name=Plasma Injector
 
 tile.mtc.ionizedPlasma.name=Ionized Plasma
 tile.mtc.toxicWaste.name=Toxic Waste
