THE GRAMMAR NAZI HAS STRUCK AGAIN

--- a/main/resources/assets/mattercraft/lang/en_US.lang
+++ b/main/resources/assets/mattercraft/lang/en_US.lang
@@ -28,7 +28,7 @@ tile.mtc.reactorPowerAcceptor.name=Reactor Power Acceptor
 tile.mtc.reactorTerminal.name=Reactor Terminal
 tile.mtc.reactorCore.name=Reactor Core
 tile.mtc.cooler.name=Cooler
-tile.mtc.electrolizer.name=Electrolizer
+tile.mtc.electrolizer.name=Electrolyzer
 tile.mtc.exhaustPipe.name=Exhaust Pipe
 tile.mtc.waterInjector.name=Water Injector
 tile.mtc.plasmaInjector.name=Plasma Injector
